--- a/src/main/resources/templates/shopping-cart/view.html
+++ b/src/main/resources/templates/shopping-cart/view.html
@@ -12,21 +12,23 @@
 <body>
 
 <div layout:fragment="content">
-    <table class="table table-hover" id="item-table">
-        <thead>
-        <th></th>
-        <th>ID</th>
-        <th>Title</th>
-        <th>Price</th>
-        <th>Item Type</th>
+
+
+    <div th:if="${contents.getNrOfElements() == 0}" class="alert alert-warning" role="alert">Shopping Cart Empty</div>
+
+    <table th:if="${contents.getNrOfElements() > 0}" class="table table-hover">
+        <thead >
+            <th></th>
+            <th>ID</th>
+            <th>Title</th>
+            <th>Price</th>
         </thead>
         <tbody>
-        <tr th:each="item : ${items}" class="clickable-row" th:data-itemType="${item.itemType.value}" th:onclick="'javascript:rowClicked2(this.getAttribute(\'data-itemType\'),' + ${item.id} + ');'">
+        <tr th:each="item : ${contents.pageList}">
             <td><img th:src="${item.imgUrl}" class="img-fluid" style="width:75px; height;225px" ></td>
             <td th:text="${item.id}"></td>
             <td th:text="${item.name}"></td>
             <td th:text="'$' + ${item.price}"></td>
-            <td th:text="${item.itemType}"></td>
         </tr>
         </tbody>
     </table>
