--- a/src/main/resources/templates/shopping-cart/view.html
+++ b/src/main/resources/templates/shopping-cart/view.html
@@ -22,13 +22,19 @@
             <th>ID</th>
             <th>Title</th>
             <th>Price</th>
+            <th>Item Type</th>
+            <th>Quantity</th>
+            <th>Date Added</th>
         </thead>
         <tbody>
-        <tr th:each="item : ${contents.pageList}">
-            <td><img th:src="${item.imgUrl}" class="img-fluid" style="width:75px; height;225px" ></td>
-            <td th:text="${item.id}"></td>
-            <td th:text="${item.name}"></td>
-            <td th:text="'$' + ${item.price}"></td>
+        <tr th:each="content : ${contents.pageList}">
+            <td><img th:src="${content.item.imgUrl}" class="img-fluid" style="width:75px; height;225px" ></td>
+            <td th:text="${content.item.id}"></td>
+            <td th:text="${content.item.name}"></td>
+            <td th:text="'$' + ${content.item.price}"></td>
+            <td th:text="${content.item.itemType}"></td>
+            <td th:text="${content.quantity}"></td>
+            <td th:text="${content.dateAdded}"></td>
         </tr>
         </tbody>
     </table>
