--- a/src/main/resources/templates/cds/view.html
+++ b/src/main/resources/templates/cds/view.html
@@ -39,9 +39,15 @@
             <td th:text="${cd.description}"></td>
         </tr>
         <tr>
-            <td colspan="2">
-                <a th:href="@{/shoppingCart/9?add=} + ${cd.id}" id="addToCartButton" class="btn btn-outline-success" type="submit">Add To Cart</a>
-            </td>
+            <form th:action="@{/shoppingCart/} + ${userShoppingCartID}">
+                <td>
+                    <input type="number" th:name="quantity" value="1"/>
+                    <input type="hidden" th:name="add" th:value="${cd.id}"/>
+                </td>
+                <td>
+                    <button class="btn btn-outline-success" type="submit">Add To Cart</button>
+                </td>
+            </form>
         </tr>
     </table>
 </div>
